feat(dedicated.ip): change trade names (#8737)
ref: MANAGER-10580
Signed-off-by: Yann Lojewski <yann.lojewski.ext@ovhcloud.com>

--- a/packages/manager/apps/dedicated/client/app/ip/translations/Messages_it_IT.json
+++ b/packages/manager/apps/dedicated/client/app/ip/translations/Messages_it_IT.json
@@ -164,7 +164,7 @@
   "ip_failover_short": "FO",
   "ip_failover_impossible_delete": "Impossibile eliminare questo IP",
   "ip_failover_impossible_move": "Impossibile spostare questo IP",
-  "ip_failover_cloud_move_info": "Presto sarà possibile trasferire gli Additional IP Cloud verso altri servizi di OVHcloud.",
+  "ip_failover_cloud_move_info": "A breve sarà possibile trasferire gli Additional IP verso altri prodotti OVHcloud.",
   "ip_position": "Priorità",
   "ip_position_tooltip": "La lettura delle regole è sequenziale. La regola \"0\" ha la priorità maggiore.",
   "ip_rule": "Regola",
@@ -548,7 +548,7 @@
   "iplb_infos_stickiness_cookie": "Cookie",
   "iplb_infos_stickiness_sourceIp": "IP sorgente",
   "iplb_infos_ssl_none": "Nessuno",
-  "iplb_infos_ssl_ovh": "Fornito da OVH",
+  "iplb_infos_ssl_ovh": "Fornito da OVHcloud",
   "iplb_infos_ssl_customer": "Fornito dal cliente",
   "iplb_stickiness_set_question": "Quale tipo di gestione delle sessioni preferisci?",
   "iplb_stickiness_set_success": "Il valore della gestione delle sessione sarà aggiornato entro pochi minuti.",
@@ -572,14 +572,14 @@
   "iplb_ssl_chain": "Canale",
   "iplb_ssl_import_title": "Importa un certificato SSL",
   "iplb_ssl_import_question": "Stai per importare il tuo certificato SSL.",
-  "iplb_ssl_import_question2": "Attenzione: sarà possibile ripristinare il certificato OVH in seguito",
+  "iplb_ssl_import_question2": "Attenzione: sarà possibile ripristinare il certificato OVHcloud in un secondo momento.",
   "iplb_ssl_import_success": "Il tuo certificato SSL sarà importato entro pochi minuti.",
   "iplb_ssl_import_failure": "Si è verificato un errore nell'importazione del certificato SSL.",
-  "iplb_ssl_restore_title": "Ripristina il certificato SSL OVH",
-  "iplb_ssl_restore_question": "Vuoi davvero ripristinare il certificato SSL OVH?",
+  "iplb_ssl_restore_title": "Ripristinare il certificato SSL OVHcloud",
+  "iplb_ssl_restore_question": "Vuoi davvero ripristinare il certificato SSL OVHcloud?",
   "iplb_ssl_restore_question2": "Invieremo una messaggio DCV a \"postmaster@tuo_dominio.com\".",
-  "iplb_ssl_restore_success": "Il tuo certificato SSL OVH sarà ripristinato dopo la validazione.",
-  "iplb_ssl_restore_failure": "Si è verificato un errore durante il ripristino del tuo certificato SSL OVH. ",
+  "iplb_ssl_restore_success": "Il tuo certificato SSL OVHcloud sarà ripristinato dopo la validazione.",
+  "iplb_ssl_restore_failure": "Si è verificato un errore durante il ripristino del tuo certificato SSL OVHcloud. ",
   "iplb_zone_internalnatip": "IP NAT interno",
   "iplb_zone_probeip": "IP del protocollo di test",
   "iplb_zone_order_btn": "Ordina",
@@ -599,7 +599,7 @@
   "iplb_backend_probe_NONE": "Nessuno",
   "iplb_backend_probe_help_NONE": "Nessuno: nessuna verifica",
   "iplb_backend_probe_help_HTTPICMP": "HTTP/ICMP: test sulla porta indicata",
-  "iplb_backend_probe_help_OCO": "OCO: (Ovh Check Out) Test sulla porta 79",
+  "iplb_backend_probe_help_OCO": "OCO: (OVHcloud Check Out) Test sulla porta 79",
   "iplb_backend_add_title": "Aggiungi un backend ",
   "iplb_backend_add_question": "Inserisci tutte le informazioni e poi clicca su \"Conferma\":",
   "iplb_backend_add_ipbackend": "IP del backend",
@@ -702,7 +702,7 @@
   "ip_table_header_reverse_help": "Record DNS che permette la risoluzione inversa (indirizzo IP verso hostname).",
   "ip_table_header_virtual_mac_help": "MAC address utilizzato per assegnare l'indirizzo IP a una risorsa virtualizzata in modalità bridge per i servizi compatibili.",
   "ip_table_header_mitigation_help": "Stato della protezione anti-DDoS.",
-  "ip_table_header_security_help": "Stato dell'Edge Firewall Network",
+  "ip_table_header_security_help": "Stato dell'Edge Network Firewall",
   "ip_table_header_game_mitigation_help": "Disponibilità della protezione anti-DDoS Game per il servizio.",
   "ip_table_header_organisation": "Organizzazione",
   "ip_table_header_organisation_help": "Un'organizzazione rappresenta l'entità responsabile di un blocco IP specifico (ad esempio, la tua azienda).",
@@ -723,9 +723,9 @@
   "ip_mitigation_CREATION_PENDING_help": "Attivazione della mitigazione in corso...",
   "ip_mitigation_REMOVAL_PENDING_help": "Disattivazione della mitigazione in corso...",
   "ip_game_mitigation_ACTIVATED_help": "L'opzione di protezione anti-DDoS Game è disponibile per questo servizio.",
-  "ip_firewall_NOT_CONFIGURED_help": "Il traffico non passa per l’Edge Firewall Network, in quanto questo servizio non è mai stato configurato.",
-  "ip_firewall_DEACTIVATED_help": "Il traffico non passa per l’Edge Firewall Network",
-  "ip_firewall_ACTIVATED_help": "Il traffico proveniente dall'esterno della rete OVHcloud passa per l’Edge Firewall Network. Importante: l'Edge Firewall Network si attiva automaticamente a ogni attacco DDoS e non può essere disattivato prima della fine dell'attacco.",
+  "ip_firewall_NOT_CONFIGURED_help": "Il traffico non passa per l'Edge Network Firewall e il servizio non è mai stato configurato.",
+  "ip_firewall_DEACTIVATED_help": "Il traffico non passa per l'Edge Network Firewall.",
+  "ip_firewall_ACTIVATED_help": "Il traffico proveniente dall'esterno della rete OVHcloud passa per l’Edge Network Firewall. Importante: l'Edge Firewall Network si attiva automaticamente a ogni attacco DDoS e non può essere disattivato prima della fine dell'attacco.",
   "ip_firewall_PENDING_help": "Attivazione o disattivazione del firewall in corso...",
   "ip_firewall_DISABLE_PENDING_help": "Disattivazione del firewall in corso....",
   "ip_firewall_ENABLE_PENDING_help": "Attivazione del firewall in corso...",
