--- a/packages/manager/apps/dedicated/client/app/ip/translations/Messages_pl_PL.json
+++ b/packages/manager/apps/dedicated/client/app/ip/translations/Messages_pl_PL.json
@@ -164,7 +164,7 @@
   "ip_failover_short": "FO",
   "ip_failover_impossible_delete": "Ten adres IP nie może zostać usunięty.",
   "ip_failover_impossible_move": "Ten adres IP nie może zostać przeniesiony.",
-  "ip_failover_cloud_move_info": "Wkrótce będziesz mógł przenieść adresy Additional IP Cloud do innych produktów OVHcloud.",
+  "ip_failover_cloud_move_info": "Wkrótce będziesz mógł przenieść Additional IP na inne produkty OVHcloud.",
   "ip_position": "Priorytet",
   "ip_position_tooltip": "Odczyt reguł jest sekwencyjny. Reguła 0 ma najwyższy priorytet.",
   "ip_rule": "Reguła",
@@ -548,7 +548,7 @@
   "iplb_infos_stickiness_cookie": "Cookie",
   "iplb_infos_stickiness_sourceIp": "IP źródłowe",
   "iplb_infos_ssl_none": "Brak",
-  "iplb_infos_ssl_ovh": "Dostarczone przez OVH",
+  "iplb_infos_ssl_ovh": "Dostarczony przez OVHcloud",
   "iplb_infos_ssl_customer": "Dostarczone przez klienta",
   "iplb_stickiness_set_question": "Jaki typ zarządzania sesjami chcesz wybrać?",
   "iplb_stickiness_set_success": "Wartość zarządzania sesjami zostanie zaktualizowana w ciągu kilku minut.",
@@ -572,14 +572,14 @@
   "iplb_ssl_chain": "Kanał",
   "iplb_ssl_import_title": "Importuj certyfikat SSL",
   "iplb_ssl_import_question": "Chcesz zaimportować własny certyfikat SSL.",
-  "iplb_ssl_import_question2": "Uwaga: następnie w razie potrzeby będziesz mógł przywrócić certyfikat OVH.",
+  "iplb_ssl_import_question2": "Uwaga: W razie potrzeby będziesz mógł przywrócić certyfikat OVHcloud.",
   "iplb_ssl_import_success": "Certyfikat SSL zostanie zaimportowany w ciągu kilku minut.",
   "iplb_ssl_import_failure": "Wtstąpił błąd podczas importowania certyfikatu SSL.",
-  "iplb_ssl_restore_title": "Przywrócenie certyfikatu SSL OVH",
-  "iplb_ssl_restore_question": "Czy chcesz przywrócić certyfikat SSL OVH?",
+  "iplb_ssl_restore_title": "Przywróć certyfikat SSL OVHcloud",
+  "iplb_ssl_restore_question": "Czy chcesz przywrócić certyfikat SSL OVHcloud?",
   "iplb_ssl_restore_question2": "DCV email zostanie wysłany na \"postmaster@twoja_domena.com\".",
-  "iplb_ssl_restore_success": "Twój certyfikat SSL OVH zostanie przywrócony po jego zatwierdzeniu.",
-  "iplb_ssl_restore_failure": "Wystąpił błąd podczas przywracania certyfikatu SSL OVH.",
+  "iplb_ssl_restore_success": "Certyfikat SSL OVHcloud zostanie przywrócony po jego zatwierdzeniu.",
+  "iplb_ssl_restore_failure": "Wystąpił błąd podczas przywracania certyfikatu SSL OVHcloud.",
   "iplb_zone_internalnatip": "IP NAT wewnętrzne",
   "iplb_zone_probeip": "IP protokołu testowego",
   "iplb_zone_order_btn": "Zamów",
@@ -599,7 +599,7 @@
   "iplb_backend_probe_NONE": "Brak",
   "iplb_backend_probe_help_NONE": "Brak: Brak weryfikacji",
   "iplb_backend_probe_help_HTTPICMP": "HTTP/ICMP: Testy na wskazanym porcie",
-  "iplb_backend_probe_help_OCO": "OCO: (Ovh Check Out) Testy na porcie 79",
+  "iplb_backend_probe_help_OCO": "OCO: (OVHcloud Check Out) Testy na porcie 79",
   "iplb_backend_add_title": "Dodaj backend",
   "iplb_backend_add_question": "Uzupełnij informacje i kliknij na \"Zatwierdź\":",
   "iplb_backend_add_ipbackend": "IP usługi backend",
@@ -702,7 +702,7 @@
   "ip_table_header_reverse_help": "Rekord DNS umożliwiający odwrotną translację adresów (adres IP na nazwę hosta).",
   "ip_table_header_virtual_mac_help": "Adres MAC używany do kierowania adresu IP do zwirtualizowanego zasobu w trybie bridge dla kompatybilnych produktów.",
   "ip_table_header_mitigation_help": "Status ochrony anty-DDoS.",
-  "ip_table_header_security_help": "Status Edge Firewall Network",
+  "ip_table_header_security_help": "Status Edge Network Firewall",
   "ip_table_header_game_mitigation_help": "Dostępność ochrony Anty-DDoS Game dla usługi.",
   "ip_table_header_organisation": "Organizacja",
   "ip_table_header_organisation_help": "Organizacja oznacza podmiot odpowiedzialny za dany blok IP (np. Twoja firmę).",
@@ -723,9 +723,9 @@
   "ip_mitigation_CREATION_PENDING_help": "Trwa włączanie mitygacji.",
   "ip_mitigation_REMOVAL_PENDING_help": "Trwa wyłączanie mitygacji.",
   "ip_game_mitigation_ACTIVATED_help": "Opcja ochrony Anty-DDoS Game jest dostępna dla tej usługi.",
-  "ip_firewall_NOT_CONFIGURED_help": "Ruch nie przechodzi przez Edge Firewall Network i nigdy nie został skonfigurowany.",
-  "ip_firewall_DEACTIVATED_help": "Ruch nie przechodzi przez Edge Firewall Network.",
-  "ip_firewall_ACTIVATED_help": "Ruch pochodzący spoza sieci OVHcloud przechodzi przez Edge Firewall Network. Uwaga: Edge Firewall Network włącza się automatycznie w przypadku każdego ataku DDoS i nie może zostać wyłączony przed zakończeniem ataku.",
+  "ip_firewall_NOT_CONFIGURED_help": "Ruch nie przechodzi przez Edge Network Firewall, a Edge nie został skonfigurowany.",
+  "ip_firewall_DEACTIVATED_help": "Ruch nie przechodzi przez Edge Network Firewall.",
+  "ip_firewall_ACTIVATED_help": "Ruch przychodzący spoza sieci OVHcloud przechodzi przez Edge Network Firewall. Uwaga: Edge Network Firewall włącza się automatycznie w przypadku każdego ataku DDoS i nie można go wyłączyć przed zakończeniem ataku.",
   "ip_firewall_PENDING_help": "Trwa włączanie lub wyłączanie firewalla.",
   "ip_firewall_DISABLE_PENDING_help": "Trwa wyłączanie firewalla.",
   "ip_firewall_ENABLE_PENDING_help": "Trwa włączanie firewalla.",
