--- a/packages/manager/apps/dedicated/client/app/ip/translations/Messages_pt_PT.json
+++ b/packages/manager/apps/dedicated/client/app/ip/translations/Messages_pt_PT.json
@@ -164,7 +164,7 @@
   "ip_failover_short": "FO",
   "ip_failover_impossible_delete": "Este endereço IP não pode ser eliminado",
   "ip_failover_impossible_move": "Este endereço IP não pode ser migrado",
-  "ip_failover_cloud_move_info": "Em breve, poderá migrar os Additional IP Cloud para outros produtos OVHcloud.",
+  "ip_failover_cloud_move_info": "Em breve, poderá migrar os endereços IP adicionais para outros produtos da OVHcloud.",
   "ip_position": "Prioridade",
   "ip_position_tooltip": "A leitura das regras é sequencial. A regra 0 possui a prioridade mais alta.",
   "ip_rule": "Regra",
@@ -548,7 +548,7 @@
   "iplb_infos_stickiness_cookie": "Cookie",
   "iplb_infos_stickiness_sourceIp": "IP source",
   "iplb_infos_ssl_none": "Nenhum",
-  "iplb_infos_ssl_ovh": "Fornecido pela OVH",
+  "iplb_infos_ssl_ovh": "Fornecido pela OVHcloud",
   "iplb_infos_ssl_customer": "Fornecido pelo cliente",
   "iplb_stickiness_set_question": "Que tipo de gestão de sessões deseja?",
   "iplb_stickiness_set_success": "O valor da gestão das sessões será atualizado dentro de alguns instantes.",
@@ -572,14 +572,14 @@
   "iplb_ssl_chain": "Cadeia",
   "iplb_ssl_import_title": "Importar um certificado SSL",
   "iplb_ssl_import_question": "Está no ponto de importar o seu próprio certificado SSL.",
-  "iplb_ssl_import_question2": "Nota: Poderá restaurar o certificado OVH mais tarde, caso deseje.",
+  "iplb_ssl_import_question2": "Nota: Poderá restaurar o certificado OVHcloud mais tarde, caso deseje.",
   "iplb_ssl_import_success": "O seu certificado será importado dentro de alguns minutos.",
   "iplb_ssl_import_failure": "Ocorreu um erro aquando da importação do seu certificado SSL.",
-  "iplb_ssl_restore_title": "Restaurar o certificado SSL OVH",
-  "iplb_ssl_restore_question": "Têm a certeza de que deseja restaurar o certificado SSL OVH?",
+  "iplb_ssl_restore_title": "Restaurar o certificado SSL OVHcloud",
+  "iplb_ssl_restore_question": "Têm a certeza de que deseja restaurar o certificado SSL OVHcloud?",
   "iplb_ssl_restore_question2": "Um e-mail DCV será enviado a  \"postmaster@seu_dominio.pt\".",
-  "iplb_ssl_restore_success": "O seu certificado SSL OVH será restaurado após validação.",
-  "iplb_ssl_restore_failure": "Ocorreu um erro aquando da restauração do seu certificado SSL OVH.",
+  "iplb_ssl_restore_success": "O seu certificado SSL OVHcloud será restaurado após validação.",
+  "iplb_ssl_restore_failure": "Ocorreu um erro aquando da restauração do seu certificado SSL OVHcloud.",
   "iplb_zone_internalnatip": "IP NAT interno",
   "iplb_zone_probeip": "IP do protocolo de teste",
   "iplb_zone_order_btn": "Encomendar",
@@ -599,7 +599,7 @@
   "iplb_backend_probe_NONE": "Nenhum",
   "iplb_backend_probe_help_NONE": "Nenhum: Nenhuma verificação",
   "iplb_backend_probe_help_HTTPICMP": "HTTP/ICMP: Teste na porta indicada",
-  "iplb_backend_probe_help_OCO": "OCO: (Ovh Check Out) Testes na porta 79",
+  "iplb_backend_probe_help_OCO": "OCO: (OVHcloud Check Out) Testes na porta 79",
   "iplb_backend_add_title": "Adicionar um backend",
   "iplb_backend_add_question": "Complete as informações e depois clique em \"Validar\":",
   "iplb_backend_add_ipbackend": "IP do backend ",
@@ -702,7 +702,7 @@
   "ip_table_header_reverse_help": "Registo DNS que permite a resolução inversa (endereço IP para o nome do host).",
   "ip_table_header_virtual_mac_help": "Endereço MAC utilizado para rotear o endereço IP para um recurso virtualizado em modo bridge quanto aos produtos compatíveis.",
   "ip_table_header_mitigation_help": "Estado da proteção anti-DDoS",
-  "ip_table_header_security_help": "Estado da Edge Firewall Network",
+  "ip_table_header_security_help": "Estado da Edge Network Firewall",
   "ip_table_header_game_mitigation_help": "Disponibilidade da proteção anti-DDoS Game para o serviço",
   "ip_table_header_organisation": "Organização",
   "ip_table_header_organisation_help": "Uma organização representa a entidade responsável por um bloco IP específico (por exemplo, a sua empresa).",
@@ -723,9 +723,9 @@
   "ip_mitigation_CREATION_PENDING_help": "A ativação da mitigação está em curso.",
   "ip_mitigation_REMOVAL_PENDING_help": "A desativação da mitigação está em curso.",
   "ip_game_mitigation_ACTIVATED_help": "A opção de proteção anti-DDoS Game está disponível para este serviço.",
-  "ip_firewall_NOT_CONFIGURED_help": "O tráfego não passa pela Edge Firewall Network, e esta nunca foi configurada.",
-  "ip_firewall_DEACTIVATED_help": "O tráfego não passa pela Edge Firewall Network.",
-  "ip_firewall_ACTIVATED_help": "O tráfego proveniente do exterior da rede OVHcloud passa pela Edge Firewall Network. Nota: a Edge Firewall Network é ativada automaticamente sempre que houver um ataque DDoS e não pode ser desativada antes do fim do ataque.",
+  "ip_firewall_NOT_CONFIGURED_help": "O tráfego não passa pela Edge Network Firewall, e esta nunca foi configurada.",
+  "ip_firewall_DEACTIVATED_help": "O tráfego não passa pela Edge Network Firewall.",
+  "ip_firewall_ACTIVATED_help": "O tráfego proveniente do exterior da rede OVHcloud passa pela Edge Network Firewall. Nota: a Edge Network Firewall é ativada automaticamente sempre que houver um ataque DDoS e não pode ser desativada antes do fim do ataque.",
   "ip_firewall_PENDING_help": "A ativação ou a desativação da firewall está em curso.",
   "ip_firewall_DISABLE_PENDING_help": "A desativação da firewall está em curso.",
   "ip_firewall_ENABLE_PENDING_help": "A ativação da firewall está em curso.",
