--- a/packages/manager/apps/dedicated/client/app/dedicated/server/details/translations/Messages_es_ES.json
+++ b/packages/manager/apps/dedicated/client/app/dedicated/server/details/translations/Messages_es_ES.json
@@ -1126,5 +1126,6 @@
   "server_configuration_monitoring_update_modal_update_proactive_request_success": "Las intervenciones en el servidor {{serverName}} están activadas.",
   "server_configuration_monitoring_update_modal_update_no-proactive_request_success": "Las intervenciones en el servidor {{serverName}} están desactivadas.",
   "server_configuration_monitoring_update_modal_update_request_failed": "Se ha producido un error al modificar la opción de monitoring.",
-  "server_configuration_installation_ovh_desktop_ERP": "ERP"
+  "server_configuration_installation_ovh_desktop_ERP": "ERP",
+  "server_datacenter_YNM": "Mumbai (YNM {{number}}) - India"
 }
