--- a/packages/manager/apps/dedicated/client/app/dedicated/server/details/translations/Messages_it_IT.json
+++ b/packages/manager/apps/dedicated/client/app/dedicated/server/details/translations/Messages_it_IT.json
@@ -1126,5 +1126,6 @@
   "server_configuration_monitoring_update_modal_update_proactive_request_success": "Gli interventi sul server {{serverName}} sono attivi.",
   "server_configuration_monitoring_update_modal_update_no-proactive_request_success": "Gli interventi sono disattivati sul server {{serverName}}.",
   "server_configuration_monitoring_update_modal_update_request_failed": "Si è verificato un errore durante la modifica dell'opzione di monitoring.",
-  "server_configuration_installation_ovh_desktop_ERP": "Pianificazione delle risorse d'impresa (ERP)"
+  "server_configuration_installation_ovh_desktop_ERP": "Pianificazione delle risorse d'impresa (ERP)",
+  "server_datacenter_YNM": "Mumbai (YNM {{number}}) - India"
 }
