--- a/packages/manager/modules/nutanix/src/dashboard/component/datacenter-name/translations/Messages_fr_CA.json
+++ b/packages/manager/modules/nutanix/src/dashboard/component/datacenter-name/translations/Messages_fr_CA.json
@@ -13,5 +13,6 @@
   "server_datacenter_VIN": "Vint Hill (VIN{{number}}) - États-Unis",
   "server_datacenter_WAW": "Varsovie (WAW{{number}}) - Pologne",
   "server_datacenter_RBX_HZ": "Roubaix (RBXHZ) - France",
-  "server_datacenter_GSW": "(GSW) - France"
+  "server_datacenter_GSW": "(GSW) - France",
+  "server_datacenter_YNM": "Mumbai (YNM{{number}}) - Inde"
 }
