--- a/packages/manager/modules/nutanix/src/dashboard/component/datacenter-name/translations/Messages_it_IT.json
+++ b/packages/manager/modules/nutanix/src/dashboard/component/datacenter-name/translations/Messages_it_IT.json
@@ -13,5 +13,6 @@
   "server_datacenter_VIN": "Vint Hill  (VIN{{number}}) - Stati Uniti",
   "server_datacenter_WAW": "Varsavia (WAW{{number}}) - Polonia",
   "server_datacenter_RBX_HZ": "Roubaix (RBXHZ) - Francia",
-  "server_datacenter_GSW": "(GSW) - Francia"
+  "server_datacenter_GSW": "(GSW) - Francia",
+  "server_datacenter_YNM": "Mumbai (YNM {{number}}) - India"
 }
