--- a/packages/manager/modules/nutanix/src/dashboard/component/datacenter-name/translations/Messages_pt_PT.json
+++ b/packages/manager/modules/nutanix/src/dashboard/component/datacenter-name/translations/Messages_pt_PT.json
@@ -13,5 +13,6 @@
   "server_datacenter_VIN": "Vint Hill (VIN{{number}}) - Estados Unidos",
   "server_datacenter_WAW": "Varsóvia (WAW{{number}}) - Polónia",
   "server_datacenter_RBX_HZ": "Roubaix (RBXHZ) - França",
-  "server_datacenter_GSW": "(GSW) - França"
+  "server_datacenter_GSW": "(GSW) - França",
+  "server_datacenter_YNM": "Mumbai (YNM {{number}}) - Índia"
 }
