--- a/packages/manager/modules/pci/src/projects/project/data-processing/notebooks/add-notebook/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/pci/src/projects/project/data-processing/notebooks/add-notebook/translations/Messages_fr_FR.json
@@ -38,7 +38,7 @@
   "data_processing_add_notebook_spec_config_none_f": "Aucune",
   "data_processing_add_notebookcontainer": "Aucun conteneur Swift n'a été trouvé.",
   "data_processing_add_notebookect_storage_link": "Cliquez ici pour en ajouter un.",
-  "data_processing_add_notebook_api_equivalent": "API",
+  "data_processing_add_notebook_api_equivalent": "Voir l'équivalent API",
   "data_processing_add_notebook_spec_config_ttl": "TTL : ",
   "data_processing_add_notebook_stepper_add_notebook_button": "Créer votre notebook",
   "data_processing_add_notebook_spec_privacy_public": "Accès public",
