fix(i18n): add missing translations [CDS 2103]
Signed-off-by: CDS Translator Agent <opensource@ovh.net>

--- a/packages/manager/modules/sms/src/sms/dashboard/translations/Messages_de_DE.json
+++ b/packages/manager/modules/sms/src/sms/dashboard/translations/Messages_de_DE.json
@@ -1,15 +1,15 @@
 {
-  "sms_actions": "Je veux…",
+  "sms_actions": "Ich will...",
   "sms_actions_send_sms": "Eine SMS versenden",
-  "sms_actions_credit_account": "Créditer mon compte",
-  "sms_actions_create_contact": "Créer un contact",
-  "sms_actions_create_sender": "Créer un expéditeur",
-  "sms_actions_create_api_user": "Créer un utilisateur API",
-  "sms_actions_clean_contact_list": "Nettoyer la liste des contacts",
+  "sms_actions_credit_account": "Meinen Account aufladen",
+  "sms_actions_create_contact": "Kontakt erstellen",
+  "sms_actions_create_sender": "Einen Absender erstellen",
+  "sms_actions_create_api_user": "API-Benutzer erstellen",
+  "sms_actions_clean_contact_list": "Die Kontaktliste bereinigen",
   "sms_actions_create_campaign": "Kampagne erstellen",
   "sms_actions_campaign_history": "Kampagnen-History",
   "sms_consumed_credit_balance": "Guthabenstand",
-  "sms_consumed_last_recharge": "Dernière recharge",
+  "sms_consumed_last_recharge": "Letzte Aufladung",
   "sms_statistics": "Statistiken",
   "sms_statistics_campaign_filter_today": "Heute",
   "sms_statistics_campaign_filter_last": "Letzte Kampagne",
