--- a/packages/manager/modules/sms/src/sms/order/translations/Messages_de_DE.json
+++ b/packages/manager/modules/sms/src/sms/order/translations/Messages_de_DE.json
@@ -1,14 +1,14 @@
 {
-  "sms_order_title": "Commander des SMS",
-  "sms_order_new_account": "Nouveau Compte",
+  "sms_order_title": "SMS bestellen",
+  "sms_order_new_account": "Neuer Account",
   "sms_order_account_label": "Wählen Sie den aufzuladenden Account aus",
   "sms_order_credit_label": "Anzahl der Gutschriften",
   "sms_order_credit_custom_label": "Gewünschte Menge",
   "sms_order_credit_custom": "Andere",
   "sms_order_order": "Bestellschein erstellen",
-  "sms_order_ko": "Impossible de générer le bon de commande",
-  "sms_order_order_url": "bon de commande",
-  "sms_order_order_site": "Commander sur le site",
+  "sms_order_ko": "Bestellschein kann nicht erstellt werden",
+  "sms_order_order_url": "Bestellschein",
+  "sms_order_order_site": "Auf der Website bestellen",
   "sms_order_price_quantity": "Preis",
   "sms_order_price_gift": "Ermäßigung",
   "sms_order_price_total": "Gesamt",
