--- a/packages/manager/modules/sms/src/sms/guides/translations/Messages_it_IT.json
+++ b/packages/manager/modules/sms/src/sms/guides/translations/Messages_it_IT.json
@@ -1,7 +1,9 @@
 {
+  "sms_guides_breadcrumb": "Guide",
+  "sms_guides_section_smpp": "SMPP",
+  "sms_guides_smpp_control_panel": "Gestione di un account SMS SMPP",
+  "sms_guides_smpp_specifications": "Specifiche tecniche del SMPP",
   "sms_guides_section_compose": "Componi un SMS",
-  "sms_guides_compose_faq": "FAQ",
-  "sms_guides_compose_filters": "Lista delle eccezioni e filtri in base alla destinazione.",
   "sms_guides_compose_manager": "Come inviare un SMS dallo Spazio Cliente?",
   "sms_guides_compose_email": "Come inviare un SMS da un indirizzo email?",
   "sms_guides_compose_url": "Come inviare un SMS tramite URL?",
@@ -14,18 +16,12 @@
   "sms_guides_options_callback": "Guida all'utilizzo del callback SMS.",
   "sms_guides_section_users": "Gestisci gli utenti",
   "sms_guides_users_about": "Tutto sugli utenti SMS.",
-  "sms_guides_users_faq": "A cosa serve un utente SMS?",
   "sms_guides_users_add": "Come aggiungere un nuovo utente SMS?",
-  "sms_guides_users_quota": "Come gestire i consumi SMS di un utente?",
   "sms_guides_section_api": "Utilizzo dell’API",
   "sms_guides_api_cookbook": "API SMS Cookbook.",
   "sms_guides_api_java": "Invia SMS con l’API OVH in Java.",
   "sms_guides_api_csharp": "Invia SMS con l’API OVH in C#.",
   "sms_guides_api_nodejs": "Invia SMS con l’API OVH in Node.js.",
   "sms_guides_api_php": "Invia SMS con l’API OVH in PHP.",
-  "sms_guides_empty": "Nessuna guida disponibile per la lingua selezionata.",
-  "sms_guides_breadcrumb": "Guide",
-  "sms_guides_section_smpp": "SMPP",
-  "sms_guides_smpp_control_panel": "Gestione di un account SMS SMPP",
-  "sms_guides_smpp_specifications": "Specifiche tecniche del SMPP"
+  "sms_guides_empty": "Nessuna guida disponibile per la lingua selezionata."
 }
