--- a/packages/manager/apps/container/src/public/translations/pci-sidebar/Messages_de_DE.json
+++ b/packages/manager/apps/container/src/public/translations/pci-sidebar/Messages_de_DE.json
@@ -3,6 +3,6 @@
   "sidebar_pci_project_list": "Meine Projekte",
   "sidebar_pci_project_all": "Alle meine Projekte anzeigen",
   "sidebar_pci_project_search": "Projekt suchen",
-  "sidebar_pci_project_id_copy": "In die Zwischenablage kopiere",
+  "sidebar_pci_project_id_copy": "In die Zwischenablage kopieren",
   "sidebar_pci_project_id_copied": "Kopiert"
 }
