fix(dedicated.server): add india server location label (#8864)
 ref: MANAGER-10843

Signed-off-by: Anoop <anoop.n@ovhcloud.com>
Signed-off-by: Anoop <anoop.n@ovhcloud.com>
Signed-off-by: CDS Translator Agent <opensource@ovh.net>
Signed-off-by: Mohammed ZAHAF <mohammed.zahaf.ext@ovhcloud.com>

--- a/packages/manager/apps/dedicated/client/app/dedicated/server/details/translations/Messages_fr_FR.json
+++ b/packages/manager/apps/dedicated/client/app/dedicated/server/details/translations/Messages_fr_FR.json
@@ -1105,6 +1105,7 @@
   "server_datacenter_WAW": "Varsovie (WAW{{number}}) - Pologne",
   "server_datacenter_RBX_HZ": "Roubaix (RBXHZ) - France",
   "server_datacenter_GSW": "(GSW) - France",
+  "server_datacenter_YNM": "Mumbai (YNM{{number}}) - Inde",
   "server_usage_chart_yaxis_label": "Utilisation (en %)",
   "server_usage_chart_xaxis_label": "Temps",
   "server_duration_upto": "Jusqu'au {{t0}}",
